--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1>Sistema Comercial Força de Venda</h1>
         </div>
         <div class="menu">
-            <a href="#">Home</a>
+            <a href="#">Entrar</a>
             <a href="#">Sobre Nós</a>
             <a href="#">Fale conosco</a>
             <a id="botao" href="#">Serviços</a>
@@ -131,5 +131,6 @@
         class="href"><img class="whats" src="img/whats.png" alt="Whats png"></a>
     <!-- Fim botão Whats -->
 </body>
+
 
 </html>
